2007-08-20  Martin Hunt  <hunt@redhat.com>
	PR2424
	From Lai Jiangshan <laijs@cn.fujitsu.com>
	
	* util.cxx (cmdstr_quoted): New. Properly quote 
	command string.
	* buildrun.cxx (run_pass): Call cmdstr_quoted().

2007-08-20  Frank Ch. Eigler  <fche@elastic.org>

	From Satoru MORIYA <satoru.moriya.br@hitachi.com>
	* staplog.c: Updated.

2007-08-20  David Smith  <dsmith@redhat.com>

	From Lai Jiangshan <laijs@cn.fujitsu.com>
	* main.cxx (main): Make sure the '-c' and '-x' options can't be
	specified together.

2007-08-17  Frank Ch. Eigler  <fche@elastic.org>

	As suggested by "Zhaolei" <zhaolei@cn.fujitsu.com>:
	* elaborate.cxx (semantic_pass_optimize[12],
	unresolved, invalid, mismatch): Use stringstream and
	print_error(semantic_error) instead of ad-hoc cerr.

2007-08-16  Frank Ch. Eigler  <fche@elastic.org>

	PR 1315.
	* stapfuncs.5.in: Document new target_set tapset.

2007-08-16  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (install-exec-hook): Only make staprun setuid if
	"make install" is being run as root.
	* Makefile.in: Regenerated.

2007-08-16  Josh Stone  <joshua.i.stone@intel.com>

	PR 4591
	* parse.cxx (parser::parse_symbol): Tweak 'print' matching to allow
	all the new variants with printd and println.
	* staptree.h (struct print_format): Add fields for the new print
	variants, and parse_print() to help matching.
	* staptree.cxx (print_format::parse_print): New static method to
	match the print variants and determine their properties.
	(print_format::print): Handle the new print types.
	(deep_copy_visitor::visit_print_format): Copy the new fields.
	* translate.cxx (c_unparser::visit_print_format): Insert delims and
	newlines where appropriate for new print functions.
	* stap1.in: Document the new print functions.

2007-08-15  David Smith  <dsmith@redhat.com>

	* systemtap.spec.in: Updated %pre to latest Fedora group creation
	guidelines.

	* stap.1.in: Changed '/usr' to '@prefix@' so the values will be
	updated correctly.